[gd_scene load_steps=5 format=3 uid="uid://dunxarwhosmuc"]

[ext_resource type="Script" path="res://src/gui/scenes/Equipment.gd" id="1_vh3u7"]
[ext_resource type="Texture2D" uid="uid://f0l1nqswpska" path="res://assets/flame.png" id="2_m1bx2"]
[ext_resource type="PackedScene" uid="uid://dgljmupa82pp5" path="res://src/gui/components/tile_inspector.tscn" id="3_wjx4l"]

[sub_resource type="Theme" id="Theme_cqmlu"]

[node name="Equipment" type="Control"]
process_mode = 3
top_level = true
z_index = 5
custom_minimum_size = Vector2(1000, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vh3u7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_cqmlu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 50

[node name="ProtocolList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProtocolList"]
layout_mode = 2
text = "Protocols:"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProtocolList"]
layout_mode = 2
mouse_filter = 1

[node name="ProtocolList" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProtocolList/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ProtocolList/PanelContainer/ProtocolList"]
layout_mode = 2
texture = ExtResource("2_m1bx2")
expand_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ProtocolList/PanelContainer/ProtocolList/TextureRect2"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ItemList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList"]
layout_mode = 2
text = "Items:"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList"]
layout_mode = 2
mouse_filter = 1

[node name="ItemList" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ItemList/PanelContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="UpdateProtocols" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Update protocols"

[node name="Inpector" type="AspectRatioContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="TileInspector" parent="PanelContainer/MarginContainer/VBoxContainer/Inpector" instance=ExtResource("3_wjx4l")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ProtocolList/PanelContainer/ProtocolList/TextureRect2/Button" to="." method="_on_item_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UpdateProtocols" to="." method="_on_update_protocols_pressed"]
